09 March 2016: Willem
	- User defined pluggable event API for libunbound
	- Fixup of compile fix for pluggable event API from P.Y. Adi
	  Prasaja.

09 March 2016: Wouter
	- Updated configure and ltmain.sh.
	- Updated L root IPv6 address.

07 March 2016: Wouter
	- Fix #747: assert in outnet_serviced_query_stop.
	- iana ports fetched via https.
	- iana portlist update.

03 March 2016: Wouter
	- configure tests for the weak attribute support by the compiler.

02 March 2016: Wouter
	- 1.5.8 release tag
	- trunk contains 1.5.9 in development.
	- iana portlist update.
	- Fix #745: unbound.py - idn2dname throws UnicodeError when idnname
	  contains trailing dot.

24 February 2016: Wouter
	- Fix OpenBSD asynclook lock free that gets used later (fix test code).
	- Fix that NSEC3 negative cache is used when there is no salt.

23 February 2016: Wouter
	- ub_ctx_set_stub() function for libunbound to config stub zones.
	- sorted ubsyms.def file with exported libunbound functions.

19 February 2016: Wouter
	- Print understandable debug log when unusable DS record is seen.
	- load gost algorithm if digest is seen before key algorithm.
	- iana portlist update.

17 February 2016: Wouter
	- Fix that "make install" fails due to "text file busy" error.

16 February 2016: Wouter
	- Set IPPROTO_IP6 for ipv6 sockets otherwise invalid argument error.

15 February 2016: Wouter
	- ip-transparent option for FreeBSD with IP_BINDANY socket option.
	- wait for sendto to drain socket buffers when they are full.

9 February 2016: Wouter
	- Test for type OPENPGPKEY.
	- insecure-lan-zones: yesno config option, patch from Dag-Erling
	  Smørgrav.

8 February 2016: Wouter
	- Fix patch typo in prevuous commit for 734 from Adi Prasaja.
	- RR Type CSYNC support RFC 7477, in debug printout and config input.
	- RR Type OPENPGPKEY support (draft-ietf-dane-openpgpkey-07).

29 January 2016: Wouter
	- Neater cmdline_verbose increment patch from Edgar Pettijohn.

27 January 2016: Wouter